# autobottom

./: .gitignore  README.md  REFACTOR-SCOPE.md  ast.md  autobottom.rune  bugfix-report.md  context-dump.md  controller.ts  deno.json  emailreportplan.md  env.ts  expr-builder-demo.html  expr-builder-demo.md  integrations.md  issues.rca.md  main.ts  protocol-prompt.md  provider-edit.md  refactor.md  reproduce.json  seed-data.json  serve.ts  sound-test.html  sounds-backup-v1.js  swagger.ts  test-qlab-mode.ts  test-qlab.ts  test-single.ts
.playwright-mcp/: page-2026-04-09T14-40-47-964Z.yml  page-2026-04-09T14-48-56-003Z.yml  page-2026-04-09T14-49-35-217Z.yml  page-2026-04-09T14-49-48-024Z.yml  page-2026-04-09T18-57-58-700Z.yml  page-2026-04-09T18-58-02-444Z.yml  page-2026-04-09T18-58-31-716Z.yml
agent/: handlers.ts  kv.ts  page.ts
auth/: kv.ts  page.ts
bootstrap/: config.ts  mod.ts
chat/: page.ts
dashboard/: page.ts
frontend/: .env.example  CLAUDE.md  build.ts  deno.json  dev.ts  main.ts
instrument/: backend.ts  index.html
judge/: dashboard.ts  handlers.ts  kv.ts  page.ts
lib/: firestore.ts  kv.ts  otel.ts  queue.ts  report-engine.ts  report-renderer.ts  s3.ts
manager/: audits-page.ts  handlers.ts  kv.ts  page.ts
overlay/: package.json
overlay/src-tauri/: Cargo.toml  tauri.conf.json
overlay/src-tauri/capabilities/: default.json
overlay/src-tauri/src/: lib.rs  main.rs
providers/: assemblyai.ts  bad-word.ts  bad-words.ts  genie.ts  groq.ts  pinecone.ts  postmark.ts  question-expr.ts  quickbase.ts  sheets.ts
question-lab/: handlers.ts  kv.ts  (+1 more)
(+1335 files in other folders)
